--- a/just_audio/pubspec.yaml
+++ b/just_audio/pubspec.yaml
@@ -8,8 +8,18 @@ environment:
   flutter: ">=1.12.13+hotfix.5"
 
 dependencies:
-  just_audio_platform_interface: ^2.0.1
-  just_audio_web: ^0.2.3
+  # just_audio_platform_interface: ^2.0.0
+  just_audio_platform_interface:    
+    git:
+      url: https://github.com/MichealReed/just_audio.git
+      ref: merge-viz
+      path: just_audio_platform_interface
+  # just_audio_web: ^0.2.3
+  just_audio_web:
+    git:
+      url: https://github.com/MichealReed/just_audio.git
+      ref: merge-viz
+      path: just_audio_web
   audio_session: ^0.0.11
   rxdart: ">= 0.24.1 < 0.26.0"
   path: ^1.6.4
