--- a/just_audio/pubspec.yaml
+++ b/just_audio/pubspec.yaml
@@ -12,13 +12,13 @@ dependencies:
   just_audio_platform_interface:    
     git:
       url: https://github.com/MichealReed/just_audio.git
-      ref: merge-viz
+      ref: mergeviz2
       path: just_audio_platform_interface
   # just_audio_web: ^0.2.3
   just_audio_web:
     git:
       url: https://github.com/MichealReed/just_audio.git
-      ref: merge-viz
+      ref: mergeviz2
       path: just_audio_web
   audio_session: ^0.0.11
   rxdart: ">= 0.24.1 < 0.26.0"
