--- a/just_audio_web/pubspec.yaml
+++ b/just_audio_web/pubspec.yaml
@@ -11,7 +11,12 @@ flutter:
         fileName: just_audio_web.dart
 
 dependencies:
-  just_audio_platform_interface: ^2.0.0
+  # just_audio_platform_interface: ^2.0.0
+  just_audio_platform_interface:
+    git:
+      url: https://github.com/MichealReed/just_audio.git
+      ref: mergeviz2
+      path: just_audio_platform_interface
   flutter:
     sdk: flutter
   flutter_web_plugins:
